# asterix

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .valgrind.supp  .venv  AGENT9_TRACER_COVERAGE_REPORT.md  ANALYSIS_COMPLETE.txt  ASTERIX_CATEGORY_SUPPORT_MATRIX.md  BENCHMARK_RESULTS_2025-10-20.md  BREAKING_CHANGES.md  BUILD_COMMAND_REFERENCE.txt  BUILD_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CODE_DOCUMENTATION_AUDIT.md  CODE_QUALITY_PERFORMANCE_REPORT.md  COMPILER_WARNINGS_REPORT.md  COMPOUND_TEST_SUMMARY.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_PHASE2.md  COVERAGE_PROGRESS.md  COVERAGE_REALITY_CHECK.md  CPP17_MODERNIZATION_OPPORTUNITIES.md  CPP23_BUILD_UPGRADE_SUMMARY.md  CPP23_C23_UPGRADE_PLAN.md  CPP23_DOCUMENTATION_INDEX.md  CPP23_IMPLEMENTATION_GUIDE.md  CPP23_PHASE1_QUICK_WINS_REPORT.md  CPP23_UPGRADE_QUICK_REFERENCE.md  CPP_COVERAGE_QUICK_REFERENCE.md  CPackConfig.cmake  CPackSourceConfig.cmake  CROSS_PLATFORM_BUILD_GUIDE.md  CROSS_PLATFORM_CODE_CHANGES.md  CROSS_PLATFORM_IMPLEMENTATION_CHECKLIST.md  CROSS_PLATFORM_README.md  (+86 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.local/: README.md
asterix/: README.md  __init__.py
asterix-ada/: README.md  SPARK_GUIDE.md  alire.toml  asterix_decoder.gpr
asterix-go/: README.md  asterix.go  asterix.h  asterix_test.go  asterix_wrapper.cpp  go.mod
asterix-node/: .gitignore  .npmignore  README.md  binding.gyp  jsdoc.json  package-lock.json  package.json
asterix-rs/: .tarpaulin.toml  API_DESIGN_SUMMARY.md  CI_ARCHITECTURE.md  COVERAGE.md  Cargo.toml  Cross.toml  DELIVERABLES_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_DELIVERY_SUMMARY.md  PUBLISHING_CHECKLIST.md  QUICK_START_COVERAGE.md  README.md  RUST_CI_ENHANCEMENTS.md  TEST_CI_SUMMARY.md  audit.toml  build.rs  cargo-deny.toml  codecov.yml  deny.toml  tarpaulin-report.html
asterix-rs/.cargo/: audit.toml
asterix-rs/asterix/test/: __init__.py  test_ffi_security.py
asterix-rs/benches/: can_benchmark.rs  dds_benchmark.rs  parse_benchmark.rs  zenoh_benchmark.rs
asterix-rs/examples/: asterix-dbus.service  can_bidirectional.rs  can_publisher.rs  can_subscriber.rs  ccsds_publisher.rs  com.asterix.Parser.conf  dbus_service.rs  describe_category.rs  incremental_parsing.rs  json_export.rs  parse_file.rs  parse_pcap.rs  parse_raw.rs  stream_processing.rs  streaming_parser.rs  zenoh_publisher.rs  zenoh_subscriber.rs
asterix-rs/fuzz/: Cargo.toml
asterix-rs/fuzz/fuzz_targets/: fuzz_parse.rs
asterix-rs/scripts/: README.md  compare_performance.py
asterix-rs/src/: data_types_tests.rs  error.rs  error_tests.rs  ffi.rs  ffi_wrapper.cpp  ffi_wrapper.h  lib.rs  parser.rs  types.rs
asterix-rs/src/transport/: can.rs  ccsds.rs  dbus.rs  dds.rs  mod.rs  zenoh.rs
asterix-rs/tests/: integration_test.rs  test_can.rs  test_cat011.rs  test_cat015.rs  test_cat019.rs  test_cat025.rs  test_cat031.rs  test_cat032.rs  test_cat063.rs  test_cat205.rs  test_cat240.rs  test_cat247.rs  test_cat252.rs  test_ccsds.rs  test_dbus.rs  test_dds.rs  test_ffi_coverage.rs  test_parser_coverage.rs  test_types_coverage.rs  test_zenoh.rs
asterix-ruby/: .gitignore  .rubocop.yml  CHANGELOG.md  DEVELOPMENT.md  Gemfile  IMPLEMENTATION_NOTES.md  LICENSE  README.md  Rakefile  asterix.gemspec
asterix-specs-converter/: asterixjson2xml.py  update-specs-new.py
asterix_decoder.egg-info/: PKG-INFO  SOURCES.txt
benchmarks/: .gitignore  CMakeLists.txt  FRAMEWORK_SUMMARY.md  Makefile  QUICKSTART.md  README.md  benchmark_common.h  benchmark_json_output.cpp  benchmark_pcap_processing.cpp  benchmark_udp_multicast.cpp  run_benchmarks.sh
benchmarks/data/: README.md  generate_test_data.sh
debian/: asterix-tools.install  changelog  control  copyright  libasterix-dev.install  libasterix2.install  rules
do-278/: README.md
docker/: README.md
docs/: ARCHITECTURE.md  BINDING_GUIDELINES.md  BUILD.md  CPP_USER_GUIDE.md  DO-278_IMPLEMENTATION_GUIDE.md  DOCUMENTATION.md  DOXYGEN.md  GIT_WORKTREE_WORKFLOW.md  GPL_SEPARATION_STRATEGY.md  INSTALLATION_GUIDE.md  INTEGRATION_RADAR_SIMULATION.md  PROTOCOL_INTEGRATION.md  README.md  SAFETY_CRITICAL.md  TROUBLESHOOTING.md  UPSTREAM_SYNC_STATUS.md  VERSIONING.md  WIRESHARK_PLUGIN_DESIGN.md  WIRESHARK_STATUS.md  _config.yml  index.md
install/: asterix  sample_data  sample_output
local/: README.md
openspec/: config.yaml  project.md
plugins/epan/asterix/: CMakeLists.txt  README.md  asterix_wrapper.cpp  asterix_wrapper.h  moduleinfo.h.in  packet-asterix.c  packet-asterix.h
sbom/: README.md  asterix-python-sbom.json  asterix-rust-sbom.json  asterix-sbom.json
scripts/: cancel-old-runs.sh  sync-versions.sh
src/: makefile.include
src/asterix/wireshark-plugin/4.x/: CMakeLists.txt  README.md  config.h  packet-asterix.c
tests/: README.md
tests/cpp/: CMakeLists.txt  CMakeLists.txt.backup  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_asterixdata.cpp  test_asterixdata[1]_include.cmake  test_asterixdata[1]_tests.cmake  test_asterixdefinition.cpp  test_asterixdefinition[1]_include.cmake  test_asterixdefinition[1]_tests.cmake  test_category.cpp  test_category[1]_include.cmake  test_category[1]_tests.cmake  test_datablock.cpp  test_datablock[1]_include.cmake  test_datablock[1]_tests.cmake  test_datablock_REPORT.md  test_dataitem.cpp  test_dataitem[1]_include.cmake  test_dataitem[1]_tests.cmake  test_dataitembits.cpp  test_dataitembits[1]_include.cmake  test_dataitembits[1]_tests.cmake  test_dataitemdescription.cpp  test_dataitemdescription[1]_include.cmake  test_dataitemdescription[1]_tests.cmake  test_dataitemformatbds.cpp  test_dataitemformatbds[1]_include.cmake  test_dataitemformatbds[1]_tests.cmake  test_dataitemformatbds_REPORT.md  test_dataitemformatcompound.cpp  test_dataitemformatcompound[1]_include.cmake  test_dataitemformatcompound[1]_tests.cmake  test_dataitemformatexplicit.cpp  test_dataitemformatexplicit[1]_include.cmake  test_dataitemformatexplicit[1]_tests.cmake  test_dataitemformatfixed.cpp  test_dataitemformatfixed[1]_include.cmake  test_dataitemformatfixed[1]_tests.cmake  (+61 more)
(+482 files in other folders)
